# globe_tripper

./: .env  .gitignore  LICENSE  Output.logs  README.md  Scratch.txt  about-this-agent.md  pyproject.toml  run.py  searchapi_airbnb.logs  searchapi_hotel.logs  settings.py
docs/: overview.md
docs/agents/: README.md  accommodation.md  activity.md  dispatcher.md  flight.md  planner.md  visa.md
docs/flows/: intake-to-summary.md
src/agents/: accommodation_agent.py  accommodation_search_agent.py  activity_agent.py  bureaucracy_agent.py  dispatcher_agent.py  flight_agent.py  flight_search_agent.py  parallel_planner_agent.py  search_agent.py  summary_agent.py  visa_agent.py
src/artifacts/dispatcher/: instruction.md
src/artifacts/planner/: instruction.md
src/artifacts/visa/: instruction.md
src/config/: agents.yaml  tools_config.yaml
src/state/: accommodation_state.py  activity_state.py  flight_state.py  planner_state.py  state_utils.py  visa_state.py
src/tools/: airbnb_openapi_spec.yaml  google_flights.yaml  google_flights_calendar_openapi_spec.yaml  google_hotels_autocomplete_openapi_spec.yaml  google_hotels_property_openapi_spec.yaml  planning_tools.py  tools.py
src/utils/: costs.py
tests/: conftest.py
tests/evals/: scenarios.json  test_intake.py
tests/unit/: test_state_utils.py  test_update_trip_plan.py
workflows/: eval_pipeline.yml
